--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,28 +8,6 @@ on:
     branches:
       - develop
 jobs:
-  test_php:
-    name: Test PHP
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        php-versions: ['5.6', '7.3']
-    
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Set PHP version
-      uses: shivammathur/setup-php@v1
-      with:
-        php-version: ${{ matrix.php-versions }}
-        coverage: none
-    - name: PHP version
-      run: php --version
-    - name: Install dependencies
-      run: composer install --ignore-platform-reqs
-    - name: Run PHPCS
-      run: composer run lint
-  
   cypress:
     name: E2E Tests
     runs-on: ubuntu-latest
@@ -50,3 +28,9 @@ jobs:
       run: npm run env:start
     - name: Test
       run: npm run cypress:run
+    - name: Store test screenshots
+      uses: actions/upload-artifact@v2
+      with:
+        name: screenshots
+        if-no-files-found: error
+        path: ./tests/cypress/screenshots
