--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,7 @@ jobs:
     strategy:
       matrix:
         core:
-          - {name: 'WP latest', version: 'latest'}
           - {name: 'WP trunk', version: 'WordPress/WordPress#master'}
-          - {name: 'WP minimum', version: 'WordPress/WordPress#4.9'}
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -32,5 +30,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: screenshots
-        if-no-files-found: error
-        path: ./tests/cypress/screenshots
+        path: tests/cypress/screenshots
