--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,8 @@ jobs:
       run: ./tests/bin/set-core-version.js ${{ matrix.core.version }}
     - name: Set up WP environment
       run: npm run env:start
+    - name: Setup pretty permalink
+      run: npm run wp-env run tests-cli "wp rewrite structure '/%postname%'"
     - name: Test
       run: npm run cypress:run
     - name: Store test screenshots
